# Singral

./: .gitignore  README.md  com.github.Aurnytoraink.Singral.json  com.github.Aurnytoraink.TidalGTK.json  meson.build
data/: com.github.Aurnytoraink.Singral.appdata.xml.in  com.github.Aurnytoraink.Singral.desktop.in  com.github.Aurnytoraink.Singral.gschema.xml  com.github.Aurnytoraink.TidalGTK.appdata.xml.in  com.github.Aurnytoraink.TidalGTK.desktop.in  com.github.Aurnytoraink.TidalGTK.gschema.xml  com.github.Aurnytoraink.singral.gresource.xml  com.github.Aurnytoraink.tidalgtk.gresource.xml  meson.build  singral.gresource.xml
data/css/: style.css
data/icons/logo/: meson.build
data/ui/: #window.ui#  about.ui  about.ui~  album_widget.ui  home_page.ui  login_window.ui  main_window.ui  no_internet_page.ui  shortcuts_window.ui  window.ui  window.ui~
po/: POTFILES  meson.build
src/: com.github.Aurnytoraink.singral.in  com.github.Aurnytoraink.tidalgtk.in  gst.py  help_task.py  main.py  meson.build  singral.in  tidalgtk.gresource.xml  tidalgtk.in  window.py
src/api/: constans.py  models.py  qobuz.py  request.py  session.py  spoofbuz.py
src/singral/: art_artist.py  art_track.py  gst.py  help_artwork.py  log_background.py  main.py  player.py  window.py
src/singral/api/: models.py
src/tidalgtk/: art.py  art_album.py  art_track.py  favs.py  gst.py  help_artwork.py  help_task.py  main.py  models.py  player.py  search.py  window.py
src/tidalgtk/api/: __init__.py  album.py  artist.py  download.py  exceptions.py  media.py  models.py  playlist.py  request.py  session.py
src/widgets/: home_window.py  login_window.py  main_window.py  music_window.py  no_internet.py  preferences_window.py
src/windows/: home_window.py  login_window.py  main_window.py  preferences_window.py
